added logo and icons

--- a/QRCodeScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRCodeScanner/app/src/main/res/layout/activity_main.xml
@@ -20,22 +20,21 @@
         android:background="@color/colorPrimary"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        android:id="@+id/textResult"
         android:text="@string/scanQR"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
 
-    <Button
-        android:id="@+id/btn_createEvent"
+    <TextView
+        android:id="@+id/textResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
         android:padding="10dp"
         android:background="@color/colorPrimary"
-        android:text="RECORD"
+        android:text="SCAN YOUR ID"
         android:textColor="#fefefe"
-        android:textSize="32sp"
-        android:onClick="createEvent"/>
+        android:textSize="32sp" />
 
 
 </RelativeLayout>
